# pH

./: Cargo.toml  build.rs
kernel/: Makefile  config  v6.1.8.sha256
kernel/patches/: 0001-virtio-wl.patch
ph-init/: Cargo.toml
ph-init/src/: audio.rs  error.rs  init.rs  main.rs  netlink.rs  sys.rs
src/: lib.rs
src/audio/: mod.rs  shm_streams.rs
src/audio/pulse/: client.rs  context.rs  message.rs  mod.rs  stream.rs
src/devices/: irq_event.rs  mod.rs  rtc.rs  serial.rs  virtio_block.rs  virtio_net.rs  virtio_rng.rs  virtio_serial.rs
src/devices/ac97/: ac97.rs  ac97_bus_master.rs  ac97_mixer.rs  ac97_regs.rs  mod.rs
src/devices/virtio_9p/: file.rs  filesystem.rs  mod.rs  pdu.rs  server.rs  synthetic.rs
src/devices/virtio_wl/: device.rs  mod.rs  pipe.rs  shm.rs  socket.rs  vfd.rs
src/disk/: memory.rs  mod.rs  raw.rs  realmfs.rs
src/io/: bus.rs  busdata.rs  manager.rs  mod.rs  shm_mapper.rs
src/io/pci/: address.rs  bus.rs  config.rs  consts.rs  device.rs  mod.rs
src/io/virtio/: consts.rs  device.rs  features.rs  mod.rs  queues.rs
src/io/virtio/vq/: chain.rs  descriptor.rs  mod.rs  splitqueue.rs  virtqueue.rs
src/kvm/: mod.rs
src/memory/: manager.rs  mod.rs
src/system/: drm.rs  ioctl.rs  mod.rs  netlink.rs
src/util/: mod.rs
src/virtio/: bus.rs  config.rs  consts.rs  mod.rs  virtqueue.rs
src/vm/: config.rs  error.rs  io.rs  kernel_cmdline.rs  kvm_vm.rs  mod.rs  run.rs  setup.rs  vcpu.rs
src/vm/arch/: error.rs  mod.rs
src/vm/arch/x86/: cpuid.rs  gdt.rs  interrupts.rs  kernel.rs  memory.rs  mod.rs  mptable.rs  registers.rs  setup.rs
