[package]
name = "ph"
version = "0.1.0"
authors = ["Bruce Leidl <bruce@subgraph.com>"]
edition = "2018"



[dependencies]
byteorder="1.0.0"
libc = "*"
termios = "0.2.2"
lazy_static = "1.4.0"
signal-hook = "0.1.10"
thiserror = "1.0"
vmm-sys-util = "0.11.1"
kvm-ioctls = "0.12.0"
kvm-bindings = "0.6.0"
pulse = { version = "2.27.1", package = "libpulse-binding" }
libcitadel = { git = "https://github.com/brl/citadel-tools", rev="44d5ce660f1f5cf8a3ad1060b143926a99be5148" }
